dev/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: stream-dev-whoami
  name: stream-dev-whoami
spec:
