dev/ingress-whoami.yaml
---
# whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  routes:
    - match: Host(`stream-dev-whoami.apps.glop.pasglop`)
      kind: Rule
      services:
        - name: whoami
          port: 80
